--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="w-col w-col-4 w-hidden-small w-hidden-tiny"><img src="images/300 (4).png" class="staff-head">
           <h1 class="staff-heading">MxCube</h1>
           <p class="staff-postion"><em data-new-link="true">Server Admin</em>
-          </p><img src="images/256.png" class="staff-head _2nd-row">
+          </p><img src="SoMuchNetflix.png" class="staff-head _2nd-row">
           <h1 class="staff-heading">Someone</h1>
           <p class="staff-postion"><em data-new-link="true">Server Moderator</em>
           </p>
