--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 -<!DOCTYPE html>
-<!-- Kieran Spencer Development
+<!-- Kieran Spencer Developme
     Developed by Kieran Spencer
     PUBLISHED: 09/05/2017 @ 11:04 GMT
 -->
