--- a/index.html
+++ b/index.html
@@ -57,23 +57,23 @@
       <a href="#" id="Features" class="w-inline-block link-features"></a>
       <h1 class="heading prism">Server Features</h1>
       <div class="w-row about-row">
-        <div class="w-col w-col-4 w-hidden-small w-hidden-tiny"><img src="images/rocket.png" class="about-image">
+        <div class="w-col w-col-4 w-hidden-small w-hidden-tiny"><img src="rocket.png" class="about-image">
           <h1 class="about-heading">Kits</h1>
           <p class="about-para">The server has fully developed kits with a huge variety of options to choose from.&nbsp;</p>
           <h1 class="about-heading">Plugins</h1>
           <p class="about-para">We own fully customised plugins which helps the server.&nbsp;</p>
         </div>
-        <div class="w-col w-col-4"><img src="images/Globe.png" class="about-image">
+        <div class="w-col w-col-4"><img src="Globe.png" class="about-image">
           <h1 class="about-heading">Staff</h1>
           <p class="about-para">Advanced Craft staff take pride into helping the server to be better and to stop hackers and we trust our staff to do their best.</p>
           <h1 class="about-heading"></h1>
           <p class="about-para">&nbsp;</p>
         </div>
-        <div class="w-col w-col-4"><img src="images/Star.png" class="about-image">
+        <div class="w-col w-col-4"><img src="Star.png" class="about-image">
           <h1 class="about-heading">Goal</h1>
           <p class="about-para">Our server goal is to be the most popular server out there.</p>
           <h1 class="about-heading"></h1>
-          <p class="about-para">&nbsp;</p><img src="images/Globe.png" class="w-hidden-main w-hidden-medium about-image">
+          <p class="about-para">&nbsp;</p><img src="Globe.png" class="w-hidden-main w-hidden-medium about-image">
           <h1 class="w-hidden-main w-hidden-medium about-heading">Unique</h1>
           <p class="w-hidden-main w-hidden-medium about-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
         </div>
@@ -92,18 +92,18 @@
       <a href="#" id="Staff" class="w-inline-block link-staff"></a>
       <h1 class="heading prism">Server Main Staff</h1>
       <div class="w-row">
-        <div class="w-col w-col-4 w-hidden-small w-hidden-tiny"><img src="images/SoMuchNetflix.png" class="staff-head">
+        <div class="w-col w-col-4 w-hidden-small w-hidden-tiny"><img src="SoMuchNetflix.png" class="staff-head">
           <h1 class="staff-heading">Netflix</h1>
           <p class="staff-postion"><em data-new-link="true">Server Owner</em>
-          </p><img src="images/xMangoGYT.png" class="staff-head _2nd-row">
+          </p><img src="xMangoGYT.png" class="staff-head _2nd-row">
           <h1 class="staff-heading">xMango</h1>
           <p class="staff-postion"><em data-new-link="true">Server Co-Owner</em>
           </p>
         </div>
-        <div class="w-col w-col-4 w-hidden-small w-hidden-tiny"><img src="images/SoMuchPenguin.png" class="staff-head">
+        <div class="w-col w-col-4 w-hidden-small w-hidden-tiny"><img src="SoMuchPenguin.png" class="staff-head">
           <h1 class="staff-heading">Penguin</h1>
           <p class="staff-postion"><em data-new-link="true">Server LeadDev</em>
-          </p><img src="images/KingSuch.png" class="staff-head _2nd-row">
+          </p><img src="KingSuch.png" class="staff-head _2nd-row">
           <h1 class="staff-heading">KingSuch</h1>
           <p class="staff-postion"><em data-new-link="true">Server Developer/Website Developer</em>
           </p>
