--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <center>
       &nbsp;
          <h1 class="heading teal">&nbsp;Advanced Craft</h1>
+          <img src="8.gif" class="header">
       <br>
       <h4 class="paragraph white">An awesome server network with awesome people contributing everyday to make it even better!</h4>
       </center>
@@ -155,7 +156,7 @@
     <div class="w-container">
       <div class="w-row voting-row">
         <h4 class="rules-para">PlanetMinecraft.com
-                               Test</h4>
+                               </h4>
         </div>
         <h4 class="rules-para">Minecraft-Servers.com</41>
         </div>
